Text wrap fix in Safari

--- a/pages/privacy-policy/Privacy.module.css
+++ b/pages/privacy-policy/Privacy.module.css
@@ -23,7 +23,7 @@
   width: 100%;
   text-align: justify;
   text-align-last: left;
-  text-wrap: pretty;
+  text-wrap: wrap;
   padding-bottom: 2rlh;
   height: auto;
   display: block;
